examples/type_system/failing/176_match_missing_open_brace.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let x = match 1 0 -> 0
let after = 1
